--- a/css/fluid.css
+++ b/css/fluid.css
@@ -1,6 +1,6 @@
 .fluid ul {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 0.25rem;
+  grid-gap: 20px;
   max-width: 100%;
 }
