--- a/css/overlap.css
+++ b/css/overlap.css
@@ -1,11 +1,11 @@
-.overlapping h1 {
-  margin-bottom: 1.2rem;
-}
-
 .overlapping ul {
   display: grid;
   grid-template-columns: 0.8fr 0.4fr 0.4fr 0.6fr 1.2fr;
   max-width: 900px;
+}
+
+.overlapping li {
+  box-shadow: 3px 5px 17px 6px rgba(0, 0, 0, 0.5);
 }
 
 .overlapping li:nth-child(1) {
