Add social links

--- a/css/base.css
+++ b/css/base.css
@@ -30,7 +30,7 @@ section:first-of-type {
 
 @media screen and (max-width: 1220px) {
   section {
-    padding: 20px;
+    padding: 20px 40px;
   }
 }
 
@@ -73,6 +73,54 @@ h4 {
 
 .explanation > div > p:hover {
   background-color: #6140bf;
+}
+
+
+.info,
+.twitter {
+  position: fixed;
+  top: 5px;
+  right: 0;
+  padding: 10px 10px 7px;
+  z-index: 3;
+  transition:
+    opacity 300ms ease;
+}
+
+.info:hover,
+.twitter:hover {
+  opacity: 0.7;
+}
+
+@media screen and (max-width: 500px) {
+  .info,
+  .twitter {
+    position: absolute;
+    z-index: 2;
+  }
+}
+
+@media screen and (max-width: 500px) {
+ .info {
+  right: 30px;
+ } 
+}
+
+.twitter {
+  top: 35px;
+}
+
+@media screen and (max-width: 500px) {
+ .twitter {
+  top: 5px;
+ } 
+}
+
+.info svg,
+.twitter svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
 }
 
 .no-support {
