--- a/css/base.css
+++ b/css/base.css
@@ -41,9 +41,9 @@ ul {
 }
 
 li {
-  border: 1px solid #b5b5b5;
-  border-radius: 10px;
-  overflow: hidden;
+  height: 0;
+  padding-bottom: 100%;
+  background-color: #fff;
 }
 
 h1 {
