--- a/css/masonry-1.css
+++ b/css/masonry-1.css
@@ -1,6 +1,6 @@
 .masonry-1 ul {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 20px;
   grid-template-columns: 200px 200px 620px;
 }
 
@@ -12,6 +12,8 @@
 .masonry-1 li:nth-child(2) {
   grid-column: 3;
   grid-row: 1 / 3;
+  padding-bottom: 0;
+  height: 100%;
 }
 
 .masonry-1 li:nth-child(3) {
