--- a/css/masonry-2.css
+++ b/css/masonry-2.css
@@ -1,7 +1,6 @@
 .masonry-2 ul {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: [col] 20% [col] 20% [col] 20% [col] 20%;
 }
 
 .masonry-2 li {
@@ -9,26 +8,26 @@
 }
 
 .masonry-2 li:nth-child(1) {
-  grid-column: col / span 2;
+  grid-column: 1 / 4;
   grid-row: row;
 }
 
 .masonry-2 li:nth-child(2) {
-  grid-column: col 3 / span 2;
+  grid-column: 4 / 8;
   grid-row: row;
 }
 
 .masonry-2 li:nth-child(3) {
-  grid-column: col;
+  grid-column: 1 / 3;
   grid-row: row 2;
 }
 
 .masonry-2 li:nth-child(4) {
-  grid-column: col 2 / span 3;
+  grid-column: 3 / 8;
   grid-row: row 2;
 }
 
 .masonry-2 li:nth-child(5) {
-  grid-column: col / span 4;
+  grid-column: 1 / 8;
   grid-row: row 3;
 }
