--- a/src/components/NegativeSpace/NegativeSpace.css
+++ b/src/components/NegativeSpace/NegativeSpace.css
@@ -1,7 +1,7 @@
 .negative-space ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #1f1246;
+  background-color: #1a32ab;
 }
 
 .negative-space li {
@@ -13,6 +13,7 @@
 
 .negative-space li h1 {
   margin-top: 0;
+  padding: 0;
   font-weight: 600;
 }
 
