--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,26 +1,33 @@
 .navigation {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  padding: 50px 0;
-  background-color: #556270;
-  display: none;
-}
-
-.navigation__logo {
-  color: #fff;
-  text-decoration: none;
-  font-size: 30px;
-  transition: opacity 300ms ease;
-}
-
-.navigation__logo:hover {
-  opacity: 0.7;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  animation: slideIn 1000ms;
 }
 
 .navigation__link {
-  color: #fff;
+  display: block;
+  padding: 0 8px;
+  height: 100%;
   text-decoration: none;
-  margin-left: 50px;
-  cursor: pointer;
+  color: #fff;
+  background-color: #1A32AB;
+  transition: background-color 300ms ease;
+}
+
+.navigation__link svg {
+  position: relative;
+  top: 50%;
+  transform: translate3d(0,-50%,0);
+  width: 17px;
+  transition: transform 300ms ease;
+}
+
+.navigation__link:hover {
+  background-color: #172D9C;
+}
+
+.navigation__link:hover svg {
+  transform: translate3d(-4px,-50%,0);
 }
