--- a/src/css/App.css
+++ b/src/css/App.css
@@ -102,17 +102,49 @@ section li {
   background-color: #6140bf;
 }
 
-.example-enter {
-  opacity: 0.01;
+
+.info,
+.twitter {
+  position: absolute;
+  top: 5px;
+  right: -10px;
+  padding: 10px 10px 7px;
+  z-index: 3;
+  transition:
+    opacity 300ms ease;
 }
-.example-enter.example-enter-active {
-  opacity: 1;
-  transition: opacity 500ms ease-in;
+
+.twitter {
+  right: 25px;
 }
-.example-leave {
-  opacity: 1;
+
+.info:hover,
+.twitter:hover {
+  opacity: 0.7;
 }
-.example-leave.example-leave-active {
-  opacity: 0.01;
-  transition: opacity 300ms ease-in;
+
+.info svg,
+.twitter svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
 }
+
+@media screen and (max-width: 600px) {
+  .info,
+  .twitter {
+    position: static;
+    padding: 0;
+    margin-bottom: 10px;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .twitter {
+    margin-left: 10px;
+  }
+}
+
+
+
