--- a/src/css/App.css
+++ b/src/css/App.css
@@ -66,6 +66,13 @@ h4 {
 .wrapper {
   max-width: 1300px;
   margin: 0 auto;
+  padding: 0 60px;
+}
+
+@media screen and (max-width: 1220px) {
+  .wrapper {
+    padding: 0;
+  }
 }
 
 .app-wrapper {
@@ -102,12 +109,11 @@ section li {
   background-color: #6140bf;
 }
 
-
 .info,
 .twitter {
   position: absolute;
   top: 5px;
-  right: -10px;
+  right: 10px;
   padding: 10px 10px 7px;
   z-index: 3;
   transition:
@@ -115,7 +121,7 @@ section li {
 }
 
 .twitter {
-  right: 25px;
+  right: 40px;
 }
 
 .info:hover,
