--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -44,36 +44,43 @@
 
 .home-grid a:nth-child(1) {
   grid-column: 1;
+  /* autoprefixer: off */
   grid-row: 1 / 6;
 }
 
 .home-grid a:nth-child(2) {
   grid-column: 2;
+  /* autoprefixer: off */
   grid-row: 1 / 4;
 }
 
 .home-grid a:nth-child(3) {
   grid-column: 2;
+  /* autoprefixer: off */
   grid-row: 4 / 6;
 }
 
 .home-grid a:nth-child(4) {
   grid-column: 3 / 5;
+  /* autoprefixer: off */
   grid-row: 1 / 4;
 }
 
 .home-grid a:nth-child(5) {
   grid-column: 3;
+  /* autoprefixer: off */
   grid-row: 4 / 7;
 }
 
 .home-grid a:nth-child(6) {
   grid-column: 4;
+  /* autoprefixer: off */
   grid-row: 4 / 6;
 }
 
 .home-grid a:nth-child(8) {
   grid-column: 2;
+  /* autoprefixer: off */
   grid-row: 6 / 8;
 }
 
