--- a/src/components/Masonry/Masonry.css
+++ b/src/components/Masonry/Masonry.css
@@ -11,6 +11,7 @@
 
 .masonry-1 li:nth-child(2) {
   grid-column: 3;
+  /* autoprefixer: off */
   grid-row: 1 / 3;
   padding-bottom: 0;
   height: 100%;
