--- a/src/components/ExplicitlyPlaced/ExplicitlyPlaced.scss
+++ b/src/components/ExplicitlyPlaced/ExplicitlyPlaced.scss
@@ -2,39 +2,50 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   max-width: 600px;
-  grid-gap: 20px; }
+  grid-gap: 20px;
+}
 
 .explicitly-placed li {
-  min-height: 130px; }
+  min-height: 130px;
+}
 
 .explicitly-placed li:nth-child(1) {
   grid-column: 1 / 2;
   /* autoprefixer: off */
-  grid-row: 1 / 2; }
+  grid-row: 1 / 2;
+}
 
 .explicitly-placed li:nth-child(2) {
   grid-column: 4 / 5;
   /* autoprefixer: off */
-  grid-row: 2 / 3; }
+  grid-row: 2 / 3;
+}
 
 .explicitly-placed li:nth-child(3) {
   grid-column: 2 / 3;
   /* autoprefixer: off */
-  grid-row: 3 / 4; }
+  grid-row: 3 / 4;
+}
 
 .explicitly-placed li:nth-child(4) {
   grid-column: 1 / 2;
   /* autoprefixer: off */
-  grid-row: 4 / 5; }
+  grid-row: 4 / 5;
+}
 
 .explicitly-placed li:nth-child(5) {
   grid-column: 3 / 4;
   /* autoprefixer: off */
-  grid-row: 4 / 5; }
+  grid-row: 4 / 5;
+}
 
 @media screen and (max-width: 800px) {
   .explicitly-placed ul {
-    grid-template-columns: auto; }
+    grid-template-columns: auto;
+  }
+
   .explicitly-placed li {
     grid-column: 1 !important;
-    grid-row: auto !important; } }
+    grid-row: auto !important;
+  }
+}
