--- a/src/components/Fluid/Fluid.scss
+++ b/src/components/Fluid/Fluid.scss
@@ -1,8 +1,11 @@
 .fluid ul {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-gap: 20px; }
+  grid-gap: 20px;
+}
 
 @media screen and (max-width: 800px) {
   .fluid ul {
-    grid-template-columns: auto; } }
+    grid-template-columns: auto;
+  }
+}
