--- a/src/components/NamedTracks/NamedTracks.scss
+++ b/src/components/NamedTracks/NamedTracks.scss
@@ -3,24 +3,30 @@
   grid-gap: 20px;
   grid-template-rows: [top] 100px [area-main] 1fr [area-footer] 50px [bottom];
   grid-template-columns: [left area-nav] 200px [middle area-main] 1fr [right];
-  min-height: 600px; }
+  min-height: 600px;
+}
 
 .named-tracks li {
-  min-height: auto; }
+  min-height: auto;
+}
 
 .named-tracks li#area-title {
   grid-column: left / right;
-  grid-row: top; }
+  grid-row: top;
+}
 
 .named-tracks li#area-nav {
   grid-column: area-nav;
   /* autoprefixer: off */
-  grid-row: area-main / bottom; }
+  grid-row: area-main / bottom;
+}
 
 .named-tracks li#area-main {
   grid-column: area-main;
-  grid-row: area-main; }
+  grid-row: area-main; 
+}
 
 .named-tracks li#area-footer {
   grid-column: middle;
-  grid-row: area-footer; }
+  grid-row: area-footer;
+}
