--- a/src/components/Overlap/Overlap.scss
+++ b/src/components/Overlap/Overlap.scss
@@ -1,20 +1,25 @@
 .overlap ul {
   display: grid;
-  grid-template-columns: 0.8fr 0.4fr 0.4fr 0.6fr 1.2fr; }
+  grid-template-columns: 0.8fr 0.4fr 0.4fr 0.6fr 1.2fr;
+}
 
 .overlap li {
-  box-shadow: 3px 5px 17px 6px rgba(0, 0, 0, 0.15); }
+  box-shadow: 3px 5px 17px 6px rgba(0, 0, 0, 0.15);
+}
 
 .overlap li:nth-child(1) {
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
-  z-index: 2; }
+  z-index: 2;
+}
 
 .overlap li:nth-child(2) {
   grid-column: 2 / span 3;
-  grid-row: 2 / span 4; }
+  grid-row: 2 / span 4;
+}
 
 .overlap li:nth-child(3) {
   grid-column: 4 / span 2;
   grid-row: 4 / span 3;
-  z-index: 2; }
+  z-index: 2;
+}
