--- a/src/components/Responsive/Responsive.scss
+++ b/src/components/Responsive/Responsive.scss
@@ -1,4 +1,5 @@
 .responsive ul {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 20px; }
+  grid-gap: 20px;
+}
