--- a/src/components/Masonry/Masonry.css
+++ b/src/components/Masonry/Masonry.css
@@ -75,7 +75,7 @@
   grid-column: 1 / span 3; }
 
 .masonry-3 li div {
-  background-color: #1f3ac1;
+  background-color: #1F3AC1;
   color: #fff;
   display: inline-block;
   padding: 5px 9px;
