--- a/src/components/Support/Support.css
+++ b/src/components/Support/Support.css
@@ -5,7 +5,7 @@
   line-height: 1.2;
   letter-spacing: 1px;
   background-color: #fff;
-  color: #1f3ac1; }
+  color: #1F3AC1; }
 
 @supports (display: grid) {
   .no-support {
